uniplate/tests/derive-fail/no-uniplate-attr.stderr
error: expected a uniplate declaration e.g. #[uniplate(walk_into=(Expr,Stmt))]
 --> tests/derive-fail/no-uniplate-attr.rs:3:1
  |
3 | enum Stmt {
  | ^^^^
